hack to fix flexbox overflow...

--- a/app/components/readme/readme.scss
+++ b/app/components/readme/readme.scss
@@ -1,4 +1,5 @@
 .code-well {
+  max-width: 80vw;
   display: block;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
@@ -8,8 +9,8 @@
   text-align: left;
   font-family: monospace;
   padding: 20px;
+
   white-space: pre;
-  max-width: 100%;
   overflow-x: scroll;
 }
 .code-well::-webkit-scrollbar {
